# onde

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
.agent-skills/uniffi-rs/: SKILL.md
.agents/: AGENTS.md
.agents/skills/humanizer/: SKILL.md
.agents/skills/legal-and-trademarks/: SKILL.md
.agents/skills/rust-coding-standard/: SKILL.md
.agents/skills/sdk-branding/: SKILL.md
.agents/skills/sdk-dart/: SKILL.md
.agents/skills/sdk-kotlin/: SKILL.md
.agents/skills/sdk-react-native/: SKILL.md
.agents/skills/sdk-regressions/: SKILL.md
.agents/skills/sdk-releases/: SKILL.md
.agents/skills/sdk-swift-package/: SKILL.md
.cargo/: config.toml
.github/scripts/: build-swift-xcframework.sh
.github/workflows/: build-swift-xcframework.yml  ci.yml  release-sdk-dart.yml  release-sdk-kotlin.yml  release-sdk-npm.yml  release-sdk-rust.yml  release-sdk-swift.yml
docs/: README.md  dev.md  distribution.md  index.md  mint.json  ruby-gem.md  swift-package.md
scripts/: tvos_chkstk.s
sdk/dart/: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
sdk/dart/android/: CMakeLists.txt  build.gradle
sdk/dart/example/: .gitignore  README.md  pubspec.yaml
sdk/dart/example/android/: local.properties
sdk/dart/example/ios/: Podfile
sdk/dart/example/ios/Runner/: Info.plist  Runner.entitlements
sdk/dart/example/ios/Runner.xcodeproj/: project.pbxproj
sdk/dart/example/lib/: main.dart
sdk/dart/example/macos/Flutter/: GeneratedPluginRegistrant.swift
sdk/dart/example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
sdk/dart/example/macos/Runner.xcodeproj/: project.pbxproj
sdk/dart/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
sdk/dart/example/macos/Runner/Configs/: AppInfo.xcconfig
sdk/dart/example/test/: widget_test.dart
sdk/dart/ios/: onde_inference.podspec
sdk/dart/ios/Classes/: OndeInferencePlugin.swift
sdk/dart/lib/: onde_inference.dart
sdk/dart/lib/src/: engine.dart  types.dart
sdk/dart/lib/src/frb_generated.dart/: api.dart  api.freezed.dart  frb_generated.dart  frb_generated.io.dart
sdk/dart/linux/: CMakeLists.txt  onde_inference_plugin.cc
sdk/dart/linux/include/onde_inference/: onde_inference_plugin.h
sdk/dart/macos/: onde_inference.podspec
sdk/dart/macos/Classes/: OndeInferencePlugin.swift
sdk/dart/rust/: Cargo.toml
sdk/dart/rust/src/: api.rs  frb_generated.rs  lib.rs
sdk/dart/test/: dart_test.dart
sdk/dart/windows/: CMakeLists.txt  onde_inference_plugin.cpp  onde_inference_plugin.h
sdk/kotlin/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
sdk/kotlin/example/: README.md  build.gradle.kts  proguard-rules.pro
sdk/kotlin/example/src/main/: AndroidManifest.xml
sdk/kotlin/example/src/main/kotlin/com/ondeinference/example/: ChatViewModel.kt  MainActivity.kt
sdk/kotlin/example/src/main/kotlin/com/ondeinference/example/ui/: ChatScreen.kt
sdk/kotlin/example/src/main/kotlin/com/ondeinference/example/ui/theme/: Theme.kt
sdk/kotlin/example/src/main/res/values/: strings.xml  themes.xml
sdk/kotlin/lib/: build.gradle.kts  consumer-rules.pro
sdk/kotlin/lib/src/androidMain/kotlin/com/ondeinference/onde/: Platform.android.kt
sdk/kotlin/lib/src/commonMain/kotlin/com/ondeinference/onde/: Convenience.kt  OndeInference.kt  Types.kt
sdk/kotlin/lib/src/iosMain/kotlin/com/ondeinference/onde/: ConvenienceIos.kt  OndeInferenceIos.kt
sdk/kotlin/lib/src/jvmBasedMain/kotlin/com/ondeinference/onde/: ConvenienceJvm.kt  OndeInferenceJvm.kt  PlatformSupport.kt
sdk/kotlin/lib/src/jvmMain/kotlin/com/ondeinference/onde/: NativeLoader.kt  Platform.jvm.kt
sdk/kotlin/lib/src/main/: AndroidManifest.xml
sdk/kotlin/lib/src/main/kotlin/com/ondeinference/onde/: OndeInference.kt
sdk/kotlin/lib/src/nativeInterop/cinterop/: onde.def  onde_c_api.h
sdk/kotlin/lib/src/shared/kotlin/com/ondeinference/onde/: Convenience.kt  OndeInference.kt  PlatformSupport.kt
sdk/kotlin/scripts/: build-android.sh  build-ios.sh  build-jvm.sh  generate-bindings.sh
sdk/react-native/: .gitignore  .npmignore  .npmrc  CHANGELOG.md  README.md  expo-module.config.json  package-lock.json  package.json  tsconfig.json
sdk/react-native/android/: build.gradle.kts
sdk/react-native/android/src/main/java/com/ondeinference/: OndeInferenceModule.kt
sdk/react-native/example/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
sdk/react-native/example/ios/: Podfile  Podfile.properties.json
sdk/react-native/example/ios/OndeExample/: Info.plist  OndeExample.entitlements
sdk/react-native/example/ios/OndeExample.xcodeproj/: project.pbxproj
sdk/react-native/example/ios/OndeExample.xcodeproj/xcshareddata/xcschemes/: OndeExample.xcscheme
sdk/react-native/example/ios/OndeExample.xcworkspace/: contents.xcworkspacedata
sdk/react-native/ios/: OndeInference.podspec  OndeInferenceModule.swift
sdk/react-native/rust/: Cargo.toml
sdk/react-native/rust/src/: lib.rs
sdk/react-native/scripts/: build-rust.sh
sdk/react-native/src/: OndeInferenceModule.ts  index.ts  types.ts
src/: hf_cache.rs  lib.rs
src/ffi/: c_api.rs  mod.rs  uniffi.rs
src/inference/: deepseek_coder_chat_template.txt  engine.rs  ffi.rs  mod.rs  models.rs  token.rs  types.rs
src/pulse/: client.rs  events.rs  mod.rs
uniffi-bindgen/: Cargo.toml
